--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,10 @@
-[build]
-	functions = "/functions/"
 
 [dev]
 	publish = "dist"
+
+[functions]
+  # Directory with serverless functions, including background
+  # functions, to deploy. This is relative to the base directory
+  # if one has been set, or the root directory if
+  # a base hasn’t been set.
+  directory = "functions/"
